# crrcsim-pprz

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  HISTORY  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  cmake.sh  configure  configure.ac  crrc_config.h.in
documentation/: Install_Linux.txt  Install_Win32.txt  Makefile.am  Makefile.in  README  compile.txt  control.txt  coordinate.txt  dlportio.txt  dynamic_soaring.txt  index.html  loading_files.txt  non_SI_units.txt  options.txt  windfield.txt
documentation/file_format/: Makefile.am  Makefile.in  heli01.html  index.html  scenery03.html
documentation/howto_create_models/: Makefile.am  Makefile.in  heli01.html  interface_settings.html  qc01.tex
documentation/input_method/: Makefile.am  Makefile.in
documentation/input_method/CT6A/: Makefile.am  Makefile.in  README
documentation/input_method/MNAV/: Makefile.am  Makefile.in  autopilot.txt  mnav.txt
documentation/input_method/PARALLEL_1_to_3/: Makefile.am  Makefile.in  crrcsim_at90s1200.asm  crrcsim_at90s1200.hex
documentation/input_method/RCTRAN/: Makefile.am  Makefile.in  README_old
documentation/input_method/SERIAL2/: Makefile.am  Makefile.in  README
documentation/man/: Makefile.am  Makefile.in  crrcsim.1
documentation/models/: Makefile.am  Makefile.in  Readmefirst_Crossfire.txt  Readmefirst_Erwin.txt
documentation/power_propulsion/: Makefile.am  Makefile.in  power_propulsion.html
documentation/thermals/: Makefile.am  Makefile.in  comp.gnuplot  table.cpp  table_ug.cpp  thermals.txt  thermalsim.html
locale/: Makefile.am  Makefile.in
locale/de/LC_MESSAGES/: crrcsim.mo  crrcsim.po
locale/fr/LC_MESSAGES/: crrcsim.mo  crrcsim.po
locale/it/LC_MESSAGES/: crrcsim.mo  crrcsim.po
locale/xx/LC_MESSAGES/: crrcsim.po
src/GUI/: CMakeLists.txt  crrc_audio.cpp  crrc_audio.h  crrc_calibmap.cpp  crrc_calibmap.h  crrc_ctrldev.cpp  crrc_ctrldev.h  crrc_ctrlgen.cpp  crrc_ctrlgen.h  crrc_dialog.cpp  crrc_dialog.h  crrc_f3f.cpp  crrc_f3f.h  crrc_gui_main.cpp  crrc_gui_main.h  crrc_gui_viewwind.cpp  crrc_gui_viewwind.h  crrc_joy.cpp  crrc_joy.h  crrc_launch.cpp  crrc_launch.h  crrc_loadrobot.cpp  crrc_loadrobot.h  crrc_location.cpp  crrc_location.h  crrc_mousebutton.cpp  crrc_mousebutton.h  crrc_msgbox.cpp  crrc_msgbox.h  crrc_planesel.cpp  crrc_planesel.h  crrc_scaleinput.cpp  crrc_scaleinput.h  crrc_setrecordname.cpp  crrc_setrecordname.h  crrc_slider.cpp  crrc_slider.h  crrc_spin.cpp  crrc_spin.h  crrc_video.cpp  (+11 more)
src/mod_chardevice/: CMakeLists.txt  bufferedchardevice.cpp  bufferedchardevice.h  chardevice.h  chardevicebase.cpp  chardevicebase.h  chardevicec.cpp  chardevicec.h  chardevicecommon.h  chardevicewrapper.cpp  chardevicewrapper.h  filechardevice.cpp  filechardevice.h  serialchardevice.cpp  serialchardevice.h  socketchardevicebase.cpp  socketchardevicebase.h  tcpchardevice.cpp  tcpchardevice.h  tcpserverchardevice.cpp  tcpserverchardevice.h  udpchardevice.cpp  udpchardevice.h  udpserverchardevice.cpp  udpserverchardevice.h
src/mod_cntrl/: CMakeLists.txt  controller.cpp  controller.h
src/mod_cntrl/cntrl_initinputs/: cntrl_initinputs.cpp  cntrl_initinputs.h
src/mod_cntrl/cntrl_limitflipthr/: limitflipthrottle.cpp  limitflipthrottle.h
src/mod_cntrl/cntrl_mcopter01/: cntrl_mcopter01.cpp  cntrl_mcopter01.h
src/mod_cntrl/cntrl_omega/: cntrl_omega.cpp  cntrl_omega.h
src/mod_cntrl/cntrl_phugoid/: cntrl_phugoid.cpp  cntrl_phugoid.h
src/mod_cntrl/cntrl_rateofclimb/: cntrl_rateofclimb.cpp  cntrl_rateofclimb.h
src/mod_cntrl/cntrl_scalethrottle/: scalethrottle.cpp  scalethrottle.h
src/mod_cntrl/cntrl_setuserinput/: cntrl_setuserinput.cpp  cntrl_setuserinput.h
src/mod_fdm/: CMakeLists.txt  fdm.cpp  fdm.h  fdm_env.h  fdm_inputs.h  ls_geodesy.cpp  ls_geodesy.h  ls_types.h  xmlmodelfile.cpp  xmlmodelfile.h
src/mod_fdm/eom01/: eom01.cpp  eom01.h
src/mod_fdm/fdm_002/: fdm_002.cpp  fdm_002.h
src/mod_fdm/fdm_displaymode/: fdm_displaymode.cpp  fdm_displaymode.h
src/mod_fdm/fdm_heli01/: fdm_heli01.cpp  fdm_heli01.h
src/mod_fdm/fdm_larcsim/: fdm_larcsim.cpp  fdm_larcsim.h
src/mod_fdm/fdm_mcopter01/: fdm_mcopter01.cpp  fdm_mcopter01.h
src/mod_fdm/fdm_testmode/: fdm_testmode.cpp  fdm_testmode.h
src/mod_fdm/formats/: airtoxml.cpp  airtoxml.h
src/mod_fdm/gear01/: gear.cpp  gear.h
src/mod_fdm/physics/: eom.cpp  eom.h
src/mod_fdm/power/: battery.cpp  battery.h  engine_dcm.cpp  engine_dcm.h  gearing.cpp  gearing.h  power.cpp  power.h  propeller.cpp  propeller.h  shaft.cpp  shaft.h  simplethrust.cpp  simplethrust.h  values_step.h
src/mod_inputdev/: CMakeLists.txt  inputdev.cpp  inputdev.h
src/mod_inputdev/inputdev_PPM/: inputdev_PPM.cpp  inputdev_PPM.h
src/mod_inputdev/inputdev_audio/: inputdev_audio.cpp  inputdev_audio.h
src/mod_inputdev/inputdev_ct6a/: inputdev_ct6a.cpp  inputdev_ct6a.h
src/mod_inputdev/inputdev_mnav/: inputdev_mnav.cpp  inputdev_mnav.h  mnav.cpp  mnav.h
src/mod_inputdev/inputdev_parallel/: inputdev_parallel.cpp  inputdev_parallel.h
src/mod_inputdev/inputdev_rctran/: inputdev_rctran.cpp  inputdev_rctran.h  mbuff.h
src/mod_inputdev/inputdev_rctran2/: inputdev_rctran2.cpp  inputdev_rctran2.h
src/mod_landscape/: CMakeLists.txt  crrc_builtin_scenery.cpp  crrc_builtin_scenery.h  crrc_scenery.cpp  crrc_scenery.h  hd_tilingterrain.cpp  hd_tilingterrain.h  heightdata.h  model_based_scenery.cpp  model_based_scenery.h  wind_from_terrain.cpp  wind_from_terrain.h  winddata3D.cpp  winddata3D.h
src/mod_math/: CMakeLists.txt  intgr.cpp  intgr.h  linearreg.cpp  linearreg.h  matrix33.cpp  matrix33.h  matrix44.h  pt1.cpp  pt1.h  quat_test.cpp  quaternion.cpp  quaternion.h  ratelim.h  vector3.cpp  vector3.h
src/mod_video/: CMakeLists.txt  airplane_vis.cpp  airplane_vis.h  crrc_animation.cpp  crrc_animation.h  crrc_graphics.cpp  crrc_graphics.h  crrc_sky.cpp  crrc_sky.h  crrc_ssgutils.cpp  crrc_ssgutils.h  fonts.cpp  fonts.h  glconsole.cpp  glconsole.h  gloverlay.cpp  gloverlay.h  shadow.h  shadow_volume.cpp  ssgLoadJPG.cpp
src/mod_windfield/: CMakeLists.txt  thermalprofile.h  windfield.cpp  windfield.h
(+147 files in other folders)
