# Makefile.am for "/documentation"

SUBDIRS = file_format input_method thermals man howto_create_models models power_propulsion

pkgdatadir = $(docdir)

pkgdata_DATA  = compile.txt \
                control.txt coordinate.txt davis.jpg dlportio.txt \
                dynamic_soaring.txt index.html Install_Linux.txt \
                Install_Win32.txt loading_files.txt \
                non_SI_units.txt options.txt \
                README windfield.txt

EXTRA_DIST = $(pkgdata_DATA)

