# Makefile.am for "/locale"

localedir = $(datadir)/locale

nobase_locale_DATA = fr/LC_MESSAGES/crrcsim.mo \
                     de/LC_MESSAGES/crrcsim.mo \
                     it/LC_MESSAGES/crrcsim.mo

EXTRA_DIST = $(nobase_locale_DATA) \
             xx/LC_MESSAGES/crrcsim.po \
             fr/LC_MESSAGES/crrcsim.po \
             de/LC_MESSAGES/crrcsim.po \
             it/LC_MESSAGES/crrcsim.po

