# Makefile.am for "/documentation/man"

# The default manpage crrcsim(1) goes into "man1" ...
man1datadir = $(mandir)/man1
man1data_DATA  = crrcsim.1

# ... while localized versions go into "xx/man1" where "xx" is
# the ISO country code

# de_man1datadir = $(mandir)/de/man1
# de_man1data_DATA  = de/crrcsim.1

EXTRA_DIST = $(man1data_DATA) 
# EXTRA_DIST = $(EXTRA_DIST) $(de_man1data_DATA)

