# Makefile.am for "/documentation/thermals"

pkgdatadir = $(docdir)/thermals

pkgdata_DATA  = comparison.png comp.gnuplot table.cpp \
                table_ug.cpp thermalsim.html thermals_new.png \
                thermals_old.png thermals.txt thermalv3_schalen1.png \
                thermalv3_schema.png thermprof0.dat thermprof0.png \
                thermprof1.dat thermprof2.dat thermprof2.png \
                thermprof3.dat thermprof3.png thermprof_old.dat

EXTRA_DIST = $(pkgdata_DATA)
